# scope-text-display

./: README.md  pyproject.toml
src/scope_text_display/: __init__.py  pipeline.py  schema.py
