[project]
name = "scope-text-display"
version = "0.1.0"
description = "GPU-accelerated text display plugin for Daydream Scope - renders prompts as centered, auto-scaled text"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_text_display = "scope_text_display"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_text_display"]
